...
        if (User.IsLoggedIn) {
            vwHeaderLoggedIn.isHidden = false
            vwHeaderLoggedOut.isHidden = true
            menus = [
                [
                    "type":"iconic",
                    "title":"Request",
                    "iconimg":"ic_request",
                ],
                [
                    "type":"iconic",
                    "title":"Tarik Uang",
                    "iconimg":"ic_tarik_uang",
                ],
                [
                    "type":"iconic",
                    "title":"Referral Bonus",
                    "iconimg":"ic_voucher"
                ],
                [
                    "type":"iconic",
                    "title":"Achievement",
                    "iconimg":"ic_achievement"
                ],
                [
                    "type":"iconic",
                    "title":"Bantuan",
                    "iconimg":"ic_faq"
                ],
                [
                    "type":"text-separator",
                    "title":"Feedback",
                ],
...
        }
    }
    
    // MARK: - Pickervc functions
    
    func pickerDidSelect(_ item: String) {
        if (PickerViewController.HideHiddenString(item) == "Request Barang") {
            let webVC = self.storyboard?.instantiateViewController(withIdentifier: "preloweb") as! PreloWebViewController
            var url = "https://prelo.co.id/request-barang?ref=preloapp"
            if let username = CDUser.getOne()?.username {
                url += "&username=\(username)"
            }
            webVC.url = url
            webVC.titleString = "Request Barang"
            let baseNavC = BaseNavigationController()
            baseNavC.setViewControllers([webVC], animated: false)
            self.present(baseNavC, animated: true, completion: nil)
        } else if (PickerViewController.HideHiddenString(item) == "Request Packaging") {
            let webVC = self.storyboard?.instantiateViewController(withIdentifier: "preloweb") as! PreloWebViewController
            var url = "https://prelo.co.id/request-packaging?ref=preloapp"
            if let username = CDUser.getOne()?.username {
                url += "&username=\(username)"
            }
            webVC.url = url
...
