...
                                        </constraints>
                                    </view>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Prelo Balance yang bisa ditarik" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xyB-9c-116">
                                        <rect key="frame" x="8" y="12" width="359" height="17"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pilih Bank" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8NM-0o-uYd">
                                                <rect key="frame" x="264" y="12" width="71" height="20"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
...
                                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                            </textField>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nomor Rekening" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uwl-cq-U23">
                                                <rect key="frame" x="0.0" y="0.0" width="107" height="43"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
                                            </textField>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rekening Atas Nama" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rbj-ws-1yU">
                                                <rect key="frame" x="0.0" y="0.0" width="133" height="43"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                            </textField>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Jumlah Penarikan" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8cG-xu-E8s">
                                                <rect key="frame" x="0.0" y="0.0" width="114" height="43"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                            </textField>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password Prelo" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VKn-5S-K53">
                                                <rect key="frame" x="0.0" y="0.0" width="99" height="43"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="zPj-lI-drX"/>
                                        </constraints>
                                        <state key="normal" title="TARIK UANG SEKARANG" backgroundImage="basic_green.png">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                            <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
