...
                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                <subviews>
                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="08X-Rf-cIO" userLabel="Header">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="95"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Prelo Balance" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FCb-Fk-bwu">
                                <rect key="frame" x="8" y="8" width="584" height="17"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="17" id="lBl-8L-KQr"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                <rect key="frame" x="4" y="4" width="14" height="14"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="14" id="0Qs-16-sXH"/>
                                                    <constraint firstAttribute="width" constant="14" id="Sx7-n2-D7w"/>
                                                </constraints>
                                            </imageView>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TARIK UANG" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="piJ-ai-dbT">
                                                <rect key="frame" x="23" y="4" width="82.5" height="14"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
...
