...
                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yyE-ds-oIN">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="732"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PIn-gE-SzG" userLabel="Content View">
                                <rect key="frame" x="0.0" y="0.0" width="600" height="732"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SALDO REFERRAL BONUS" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pPE-IK-EXC">
                                        <rect key="frame" x="8" y="24" width="584" height="21"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="21" id="286-CG-xDI"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                        <color key="textColor" red="0.44682067632675171" green="0.44680723547935486" blue="0.44681483507156372" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                            <constraint firstAttribute="height" constant="21" id="0hp-6G-CdU"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                        <color key="textColor" red="0.076683484017848969" green="0.59757840633392334" blue="0.5461774468421936" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(Pengguna baru hanya dapat memasukkan kode referral sebanyak satu kali)" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingM
                                        <rect key="frame" x="8" y="259" width="584" height="14"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                        <color key="textColor" red="0.44682067632675171" green="0.44680723547935486" blue="0.44681483507156372" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VIq-8q-HHe" userLabel="Share Buttons">
...
